fixes small error on chat page: spacing of content in /chatPage. Error with multiple icons stacking for group chat remains

--- a/src/pages/chat/chat.module.scss
+++ b/src/pages/chat/chat.module.scss
@@ -14,6 +14,8 @@
   img {
     border-radius: 50%;
     margin: 0px 3px;
+    width: 40px;
+    height: 40px;
   }
   border-radius: 50%;
   border-radius: 50%;
