--- a/src/pages/chatPg/Chat.module.scss
+++ b/src/pages/chatPg/Chat.module.scss
@@ -17,7 +17,7 @@
 .startGroupChatButton {
     // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     height: 30px;
-    width: 120px;
+    width: 105px;
     border: none;
     font-size: 14px;
     border-radius: 10px;;
